# warehouse-vision-system

./: .gitignore  CLAUDE.md  README.md  README.txt
frontend/: index.html
line_follow/code/imgprocessing/: ImgCenterLine.cpp  ImgCenterLine.h  ImgConfig.h  ImgElementDetector.cpp  ImgElementDetector.h  ImgLineTracker.cpp  ImgLineTracker.h  ImgOdometer.cpp  ImgOdometer.h  ImgPreprocess.cpp  ImgPreprocess.h  ImgYolo.cpp  ImgYolo.h  VisionPipeline.cpp  VisionPipeline.h
line_follow/code/inc/: FuzzyPID.h  Menu.h  img_math.h  img_process_app.h  imu.h  kalman_filter.h  key.h  key.hpp  ladrc.h  ladrc.hpp  lq_all_demo.hpp  lq_ncnn.h  params.h  pid.h  pid_.h  usart.hpp  vofa_function.h  vofa_uart.h
line_follow/code/src/: FuzzyPID.cpp  GPIO.cpp  Menu.cpp  base_transfer.c  img_math.cpp  imu.cpp  kalman_filter.c  key.c  key.cpp  ladrc.cpp  lq_ncnn.cpp  lq_ncnn_demo.cpp  params.cpp  pid.cpp  pid_.cpp  usart.cpp  vofa_function.c  vofa_uart.c
line_follow/user/: CMakeLists.txt  build.sh  input.txt  main.cpp
server/: app.py  tracker.py  udp_listener.py
tcp_camera/user/: CMakeLists.txt  build.sh  main.cpp
vehicle_client/: CMakeLists.txt  build.sh  pub.cpp  zf_driver_udp.cpp  zf_driver_udp.hpp
vehicle_client/lidar_driver/: rplidar_driver.cpp  rplidar_driver.hpp
vehicle_client/navigation/: nav_core.cpp  nav_core.hpp
vehicle_client/slam/: gmapping.cpp  gmapping.hpp
vehicle_client/vision/: yolo_detector.cpp  yolo_detector.hpp
